--- a/hVMCP.cabal
+++ b/hVMCP.cabal
@@ -12,7 +12,7 @@ bug-reports:    https://github.com/Cj-bc/hVMCP/issues
 author:         Cj.bc-sd a.k.a Cj-bc
 maintainer:     cj.bc-sd@outlook.jp
 copyright:      2021 Cj.bc-sd a.k.a Cj-bc
-license:        BSD3
+license:        GPL-3.0
 license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
