--- a/hVMCP.cabal
+++ b/hVMCP.cabal
@@ -25,13 +25,15 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
   other-modules:
       Paths_hVMCP
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , text
+    , linear
+    , lens
   default-language: Haskell2010
 
 executable hVMCP-exe
