--- a/hVMCP.cabal
+++ b/hVMCP.cabal
@@ -52,5 +52,24 @@ executable hVMCP-exe
   build-depends:
       base >=4.7 && <5
     , hVMCP
-    , hVMCP
+    , hosc
   default-language: Haskell2010
+
+test-suite hVMCP-test
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  test-module:
+      MarionetteSpec
+  other-modules:
+      Paths_hVMCP
+  hs-source-dirs:
+      test
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base >=4.7 && <5
+    , hVMCP
+    , hspec
+    , hosc
+    , mtl
+  default-language: Haskell2010
+           
