--- a/hVMCP.cabal
+++ b/hVMCP.cabal
@@ -69,7 +69,11 @@ test-suite hVMCP-test
       base >=4.7 && <5
     , hVMCP
     , hspec
+    , QuickCheck
+    , quickcheck-instances
     , hosc
     , mtl
+    , linear
+    , text
   default-language: Haskell2010
            
