--- a/hVMCP.cabal
+++ b/hVMCP.cabal
@@ -57,6 +57,16 @@ executable hVMCP-exe
     , hosc
   default-language: Haskell2010
 
+executable recieve10
+  main-is: Recieve10.hs
+  hs-source-dirs:
+      examples
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base >= 4.7 && <5
+    , hVMCP
+    , pipes
+
 test-suite hVMCP-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
