--- a/hVMCP.cabal
+++ b/hVMCP.cabal
@@ -66,6 +66,16 @@ executable sendTest
     , hVMCP
     , pipes
 
+executable bypass
+  main-is: bypass.hs
+  hs-source-dirs:
+      examples
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+       base >= 4.7 && <5
+     , hVMCP
+     , pipes
+
 test-suite hVMCP-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
