--- a/hVMCP.cabal
+++ b/hVMCP.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Data.VMCP.Marionette
+    , Data.VMCP.Message
     , Data.VRM
     , Data.UnityEditor
     , Sound.OSC.Lens
