--- a/hVMCP.cabal
+++ b/hVMCP.cabal
@@ -47,8 +47,8 @@ library
     , bytestring
   default-language: Haskell2010
 
-executable recieve10
-  main-is: Recieve10.hs
+executable receive10
+  main-is: Receive10.hs
   hs-source-dirs:
       examples
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
@@ -57,8 +57,8 @@ executable recieve10
     , hVMCP
     , pipes
 
-executable recieveForever
-  main-is: RecieveForever.hs
+executable receiveForever
+  main-is: ReceiveForever.hs
   hs-source-dirs:
       examples
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
