--- a/hVMCP.cabal
+++ b/hVMCP.cabal
@@ -23,6 +23,10 @@ source-repository head
   type: git
   location: https://github.com/Cj-bc/hVMCP
 
+flag examples
+     Description: build example programs
+     Default: false
+
 library
   exposed-modules:
       Data.VMCP.Marionette
@@ -48,6 +52,8 @@ library
   default-language: Haskell2010
 
 executable receive10
+  if !flag(examples)
+     Buildable: false
   main-is: Receive10.hs
   hs-source-dirs:
       examples
@@ -58,6 +64,8 @@ executable receive10
     , pipes
 
 executable receiveForever
+  if !flag(examples)
+     Buildable: false
   main-is: ReceiveForever.hs
   hs-source-dirs:
       examples
@@ -68,6 +76,8 @@ executable receiveForever
     , pipes
 
 executable sendTest
+  if !flag(examples)
+     Buildable: false
   main-is: SendTest.hs
   hs-source-dirs:
       examples
@@ -78,6 +88,8 @@ executable sendTest
     , pipes
 
 executable watchBundles
+  if !flag(examples)
+     Buildable: false
   main-is: WatchBundles.hs
   hs-source-dirs:
       examples
@@ -88,6 +100,8 @@ executable watchBundles
     , pipes
 
 executable bypass
+  if !flag(examples)
+     Buildable: false
   main-is: bypass.hs
   hs-source-dirs:
       examples
@@ -98,6 +112,8 @@ executable bypass
      , pipes
 
 executable sendForever
+  if !flag(examples)
+     Buildable: false
   main-is: SendForever.hs
   hs-source-dirs:
       examples
